--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,99 @@
-.App {
+@import url("https://fonts.googleapis.com/css?family=Roboto:300,400,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Titillium+Web:400,400i,700&display=swap");
+@import url("https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css");
+
+* {
+  padding: 0;
+  margin: 0;
+}
+
+html {
+  font-family: "Roboto", sans-serif;
   text-align: center;
+  font-size: 16px;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  padding: 0.5rem;
+  background: #161616;
+  background: -webkit-linear-gradient(to right, #161616, #161616);
+  background: linear-gradient(to right, #161616, #161616);
+}
+
+h1 {
+  font: 700 4em/1 "Oswald", sans-serif;
+  letter-spacing: 0;
+  padding: 0.25em 0 0.325em;
+  display: block;
+  margin: 0 auto;
+  text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+
+  background: url(https://i.ibb.co/RDTnNrT/animated-text-fill.png) repeat-y;
+  -webkit-background-clip: text;
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-animation: aitf 80s linear infinite;
+
+  -webkit-transform: translate3d(0, 0, 0);
+  -webkit-backface-visibility: hidden;
+}
+
+@-webkit-keyframes aitf {
+  0% {
+    background-position: 0% 50%;
+  }
+  100% {
+    background-position: 100% 50%;
+  }
+}
+
+h2 {
+  margin-top: 30px;
+  color: #fd660e;
+}
+
+.box {
+  border-left: 10px solid #fd660e;
+}
+
+.blog_post {
+  max-width: 800px;
+  text-align: center;
+  position: relative;
+  padding-top: 20px;
+}
+
+img {
+  height: 14rem;
+  width: 14rem;
+  position: relative;
+  margin-top: 20px;
+  border: 2px solid #fd660e;
+  border-radius: 50%;
+  box-shadow: 1px 1px 2rem rgba(0, 0, 0, 0.3);
+  z-index: 1;
+}
+
+.btn_primary {
+  border: none;
+  outline: none;
+  background: linear-gradient(90deg, #fd660e, #fd660e);
+  margin-top: 20px;
+  padding: 0.5rem 2rem;
+  border: 2px solid #000;
+  border-radius: 20px;
   color: white;
+  font-size: 1.2rem;
+  box-shadow: 1px 10px 2rem #fd660e;
+  transition: all 0.2s ease-in;
+  text-decoration: none;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.btn_primary:hover {
+  box-shadow: 0px 5px 1rem rgba(204, 32, 2, 0.986);
 }
